Added dropdown (foreign idols)

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "# Extract required columns\n",
-    "df = data[[\"Full Name\", \"Group\", \"Former Group\", \"Date of Birth\", \"Debut\", \"Country\", \"Gender\"]]\n",
+    "df = data[[\"Full Name\", \"Stage Name\", \"Group\", \"Former Group\", \"Date of Birth\", \"Debut\", \"Country\", \"Gender\"]]\n",
     "\n",
     "dfSummary(df)"
    ]
@@ -85,7 +85,7 @@
     "df = df.loc[df[\"Debut\"] != \"0/01/1900\"]\n",
     "\n",
     "# Convert columns to required datatypes\n",
-    "df = df.astype({\"Full Name\": str, \"Group\": str, \"Former Group\": str, \"Country\": str, \"Gender\": str})\n",
+    "df = df.astype({\"Full Name\": str, \"Stage Name\": str, \"Group\": str, \"Former Group\": str, \"Country\": str, \"Gender\": str})\n",
     "df[\"Date of Birth\"] = pd.to_datetime(df[\"Date of Birth\"], format = \"%d/%m/%Y\")\n",
     "df[\"Debut\"] = pd.to_datetime(df[\"Debut\"], format = \"%d/%m/%Y\")\n",
     "\n",
@@ -201,8 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_bday2 = px.bar(bday2, x = bday2.index, y = 'Idol count', title = 'Birth year distribution of K-Pop idols', \n",
-    "             color = 'Idol count')\n",
+    "fig_bday2 = px.bar(bday2, x = bday2.index, y = 'Idol count', \n",
+    "                   title = 'Birth year distribution of K-Pop idols', color = 'Idol count')\n",
     "\n",
     "fig_bday2.update_layout(\n",
     "    xaxis = dict(\n",
@@ -234,8 +234,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_bday2a = px.bar(bday2a, x = 'Birth Year', y = 'Idol count', title = 'Birth year distribution of K-Pop idols by gender', \n",
-    "             color = 'Gender', barmode = 'group')\n",
+    "fig_bday2a = px.bar(bday2a, x = 'Birth Year', y = 'Idol count', barmode = 'group',\n",
+    "                    title = 'Birth year distribution of K-Pop idols by gender', color = 'Gender')\n",
     "\n",
     "fig_bday2a.update_layout(\n",
     "    xaxis = dict(\n",
@@ -272,8 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_bday3 = px.bar(bday3, x = bday3.index, y = 'Idol count', title = 'Birth month distribution of K-Pop idols', \n",
-    "             color = 'Idol count')\n",
+    "fig_bday3 = px.bar(bday3, x = bday3.index, y = 'Idol count', \n",
+    "                   title = 'Birth month distribution of K-Pop idols', color = 'Idol count')\n",
     "\n",
     "fig_bday3.update_layout(\n",
     "    xaxis = dict(\n",
@@ -305,8 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_bday3a = px.bar(bday3a, x = 'Birth Month', y = 'Idol count', title = 'Birth month distribution of K-Pop idols by gender', \n",
-    "             color = 'Gender', barmode = 'group')\n",
+    "fig_bday3a = px.bar(bday3a, x = 'Birth Month', y = 'Idol count', barmode = 'group',\n",
+    "                    title = 'Birth month distribution of K-Pop idols by gender', color = 'Gender')\n",
     "\n",
     "fig_bday3a.update_layout(\n",
     "    xaxis = dict(\n",
@@ -366,8 +366,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_debut2 = px.bar(debut2, x = debut2.index, y = 'Idol count', title = 'Debut month distribution of K-Pop idols', \n",
-    "             color = 'Idol count')\n",
+    "fig_debut2 = px.bar(debut2, x = debut2.index, y = 'Idol count', \n",
+    "                    title = 'Debut month distribution of K-Pop idols', color = 'Idol count')\n",
     "\n",
     "fig_debut2.update_layout(\n",
     "    xaxis = dict(\n",
@@ -432,8 +432,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_debut4 = px.bar(debut4, x = debut4.index, y = 'Idol count', title = 'Number of debuted K-Pop idols per year', \n",
-    "             color = 'Idol count')\n",
+    "fig_debut4 = px.bar(debut4, x = debut4.index, y = 'Idol count', \n",
+    "                    title = 'Number of debuted K-Pop idols per year', color = 'Idol count')\n",
     "\n",
     "fig_debut4.update_layout(\n",
     "    xaxis = dict(\n",
@@ -470,8 +470,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Group count', title = 'Number of debuted K-Pop groups per year', \n",
-    "             color = 'Group count')\n",
+    "fig_debut5 = px.bar(debut5, x = debut5.index, y = 'Group count', \n",
+    "                    title = 'Number of debuted K-Pop groups per year', color = 'Group count')\n",
     "\n",
     "fig_debut5.update_layout(\n",
     "    xaxis = dict(\n",
@@ -587,7 +587,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, title = 'Country / region of origin ratio of K-Pop idols')\n",
+    "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, \n",
+    "                   title = 'Country / region of origin ratio of K-Pop idols')\n",
     "\n",
     "# fig_meta3.show()"
    ]
@@ -632,7 +633,8 @@
     "H2_STYLE = 'my-4 ms-2 me-2 text-primary border-bottom border-primary'\n",
     "H3_STYLE = 'mt-4 mb-3 ms-4 opacity-75'\n",
     "TAB_STYLE = 'bg-primary bg-gradient bg-opacity-50 text-black'\n",
-    "TAB_SELECTED_STYLE = 'bg-light bg-gradient text-primary mx-2'"
+    "ACTIVE_TAB_STYLE = 'bg-light bg-gradient'\n",
+    "ACTIVE_LABEL_STYLE = 'text-primary fw-bold border border-primary'"
    ]
   },
   {
@@ -643,22 +645,50 @@
    "source": [
     "app.layout = html.Div([\n",
     "        html.H1('K-Pop Data Visualisations', className='mt-5 mb-2 ms-2 me-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
-    "        html.A('Find data source here', href='https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv', className='mb-4 ms-2'),\n",
+    "        html.A(\n",
+    "                'Find data source here', \n",
+    "                href='https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv', \n",
+    "                className='mb-4 ms-2'\n",
+    "            ),\n",
     "        html.Div([\n",
     "            html.H2('Idol Birthday Analysis', className=H2_STYLE),\n",
     "            html.Div([\n",
     "                html.H3('Idol birth year distribution', className=H3_STYLE),\n",
-    "                dcc.Tabs(id=\"tabs-birth-year\", value='overall-birth-year', className='mx-2', children=[\n",
-    "                    dcc.Tab(label='Overall', value='overall-birth-year', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
-    "                    dcc.Tab(label='Male / Female', value='splitted-birth-year', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
+    "                dbc.Tabs(id=\"tabs-birth-year\", active_tab='overall-birth-year', class_name='mx-2', children=[\n",
+    "                    dbc.Tab(\n",
+    "                            label='Overall', \n",
+    "                            tab_id='overall-birth-year', \n",
+    "                            class_name=TAB_STYLE, \n",
+    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                        ),\n",
+    "                    dbc.Tab(\n",
+    "                            label='Male / Female', \n",
+    "                            tab_id='splitted-birth-year', \n",
+    "                            class_name=TAB_STYLE, \n",
+    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                        ),\n",
     "                ]),\n",
     "                html.Div(id='tabs-content-birth-year')\n",
     "            ]),\n",
     "            html.Div([\n",
     "                html.H3('Idol birth month distribution', className=H3_STYLE),\n",
-    "                dcc.Tabs(id=\"tabs-birth-month\", value='overall-birth-month', className='mx-2', children=[\n",
-    "                    dcc.Tab(label='Overall', value='overall-birth-month', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
-    "                    dcc.Tab(label='Male / Female', value='splitted-birth-month', className=TAB_STYLE, selected_className=TAB_SELECTED_STYLE),\n",
+    "                dbc.Tabs(id=\"tabs-birth-month\", active_tab='overall-birth-month', class_name='mx-2', children=[\n",
+    "                    dbc.Tab(\n",
+    "                            label='Overall', \n",
+    "                            tab_id='overall-birth-month', \n",
+    "                            class_name=TAB_STYLE, \n",
+    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                        ),\n",
+    "                    dbc.Tab(\n",
+    "                            label='Male / Female', \n",
+    "                            tab_id='splitted-birth-month', \n",
+    "                            class_name=TAB_STYLE, \n",
+    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                        ),\n",
     "                ]),\n",
     "                html.Div(id='tabs-content-birth-month')\n",
     "            ]),\n",
@@ -692,11 +722,25 @@
     "                html.H3('Country of origin distribution of idols', className=H3_STYLE),\n",
     "                dcc.Graph(figure=fig_meta3, className='mx-2')\n",
     "            ])\n",
+    "        ]),\n",
+    "        html.Div([\n",
+    "            html.H2('Interactive analysis', className=H2_STYLE),\n",
+    "            html.Div([\n",
+    "                html.H3('List of foreign idols', className=H3_STYLE),\n",
+    "                dcc.Dropdown(\n",
+    "                    id='dropdown-foreign', \n",
+    "                    options=sorted([i for i in list(df[\"Country\"].unique()) if i != \"South Korea\"]), \n",
+    "                    searchable=True,\n",
+    "                    placeholder='Select a country / region...',\n",
+    "                    className='mx-4'\n",
+    "                ),\n",
+    "                html.Div(id='dropdown-content-foreign')\n",
+    "            ])\n",
     "        ])\n",
     "])\n",
     "\n",
     "# Render tabs for birth year analysis\n",
-    "@callback(Output('tabs-content-birth-year', 'children'), Input('tabs-birth-year', 'value'))\n",
+    "@callback(Output('tabs-content-birth-year', 'children'), Input('tabs-birth-year', 'active_tab'))\n",
     "def render_content(tab):\n",
     "    if tab == 'overall-birth-year':\n",
     "        return html.Div([\n",
@@ -708,7 +752,7 @@
     "        ])\n",
     "    \n",
     "# Render tabs for birth month analysis\n",
-    "@callback(Output('tabs-content-birth-month', 'children'), Input('tabs-birth-month', 'value'))\n",
+    "@callback(Output('tabs-content-birth-month', 'children'), Input('tabs-birth-month', 'active_tab'))\n",
     "def render_content(tab):\n",
     "    if tab == 'overall-birth-month':\n",
     "        return html.Div([\n",
@@ -717,7 +761,12 @@
     "    elif tab == 'splitted-birth-month':\n",
     "        return html.Div([\n",
     "            dcc.Graph(figure=fig_bday3a, className='mx-2')\n",
-    "        ])"
+    "        ])\n",
+    "    \n",
+    "# Render dropdown menu for list of foreign idols\n",
+    "@callback(Output('dropdown-content-foreign', 'children'), Input('dropdown-foreign', 'value'))\n",
+    "def update_output(value):\n",
+    "    return dbc.Table.from_dataframe(df[df[\"Country\"] == value][[\"Stage Name\", \"Group\"]], hover=True, class_name='mx-4', color='light')"
    ]
   },
   {
