Added dropdown for group names

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Drop rows where Full Name is missing (unable to identify) and Debut is filled with a placeholder date (not yet debuted)\n",
-    "df = df.loc[df[\"Full Name\"].isnull() == False]\n",
+    "df = df.loc[df[\"Full Name\"].isnull() is False]\n",
     "df = df.loc[df[\"Debut\"] != \"0/01/1900\"]\n",
     "\n",
     "# Convert columns to required datatypes\n",
@@ -210,9 +210,7 @@
     "        tick0 = 1,\n",
     "        dtick = 1\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_bday2.show()"
+    ")"
    ]
   },
   {
@@ -243,9 +241,7 @@
     "        tick0 = 1,\n",
     "        dtick = 1\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_bday2a.show()"
+    ")"
    ]
   },
   {
@@ -281,9 +277,7 @@
     "        tickvals = list(range(1, 13)),\n",
     "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_bday3.show()"
+    ")"
    ]
   },
   {
@@ -314,9 +308,7 @@
     "        tickvals = list(range(1, 13)),\n",
     "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_bday3a.show()"
+    ")"
    ]
   },
   {
@@ -375,9 +367,7 @@
     "        tickvals = list(range(1, 13)),\n",
     "        ticktext = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_debut2.show()"
+    ")"
    ]
   },
   {
@@ -441,9 +431,7 @@
     "        tick0 = 1,\n",
     "        dtick = 1\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_debut4.show()"
+    ")"
    ]
   },
   {
@@ -479,9 +467,7 @@
     "        tick0 = 1,\n",
     "        dtick = 1\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_debut5.show()"
+    ")"
    ]
   },
   {
@@ -515,9 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols')\n",
-    "\n",
-    "# fig_meta1.show()"
+    "fig_meta1 = px.pie(meta1, values = 'Idol count', names = meta1.index, title = 'Gender ratio of K-Pop idols')"
    ]
   },
   {
@@ -555,9 +539,7 @@
     "        tick0 = 1,\n",
     "        dtick = 1\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "# fig_meta2.show()"
+    ")"
    ]
   },
   {
@@ -577,8 +559,7 @@
     "meta3 = df.groupby(['Country']).count()['Full Name']\n",
     "meta3.rename('Idol count', inplace = True)\n",
     "meta3.index = np.where(meta3 < 3, 'Other countries', meta3.index)\n",
-    "meta3.index.name = 'Country / region of origin'\n",
-    "# meta3"
+    "meta3.index.name = 'Country / region of origin'"
    ]
   },
   {
@@ -588,9 +569,7 @@
    "outputs": [],
    "source": [
     "fig_meta3 = px.pie(meta3, values = 'Idol count', names = meta3.index, \n",
-    "                   title = 'Country / region of origin ratio of K-Pop idols')\n",
-    "\n",
-    "# fig_meta3.show()"
+    "                   title = 'Country / region of origin ratio of K-Pop idols')"
    ]
   },
   {
@@ -735,6 +714,17 @@
     "                    className='mx-4'\n",
     "                ),\n",
     "                html.Div(id='dropdown-content-foreign')\n",
+    "            ]),\n",
+    "            html.Div([\n",
+    "                html.H3('List of groups by alphabet', className=H3_STYLE),\n",
+    "                dcc.Dropdown(\n",
+    "                    id='dropdown-alphabet', \n",
+    "                    options=list(i.upper() for i in map(chr, range(ord('a'), ord('z')+1))) + [\"Others\"], # generate alphabets A-Z in a list\n",
+    "                    searchable=True,\n",
+    "                    placeholder='Select an alphabet...',\n",
+    "                    className='mx-4'\n",
+    "                ),\n",
+    "                html.Div(id='dropdown-content-alphabet')\n",
     "            ])\n",
     "        ])\n",
     "])\n",
@@ -766,7 +756,27 @@
     "# Render dropdown menu for list of foreign idols\n",
     "@callback(Output('dropdown-content-foreign', 'children'), Input('dropdown-foreign', 'value'))\n",
     "def update_output(value):\n",
-    "    return dbc.Table.from_dataframe(df[df[\"Country\"] == value][[\"Stage Name\", \"Group\"]], hover=True, class_name='mx-4', color='light')"
+    "    return dbc.Table.from_dataframe(df[df[\"Country\"] == value][[\"Stage Name\", \"Group\"]], hover=True, class_name='mx-4')\n",
+    "\n",
+    "# Render dropdown menu for list of groups\n",
+    "@callback(Output('dropdown-content-alphabet', 'children'), Input('dropdown-alphabet', 'value'))\n",
+    "def update_output(value):\n",
+    "    sr_group = df[\"Group\"].dropna()\n",
+    "    if value != \"Others\":\n",
+    "        return dbc.Table.from_dataframe(pd.DataFrame(sr_group[sr_group.str.startswith(str(value))]\n",
+    "                                                        .sort_values(key=lambda col: col.str.lower())\n",
+    "                                                        .unique(),\n",
+    "                                                     columns=[\"Group names\"]),\n",
+    "                                        hover=True,\n",
+    "                                        class_name='mx-4')\n",
+    "    elif value == \"Others\":\n",
+    "        return dbc.Table.from_dataframe(pd.DataFrame(sr_group[sr_group < \"A\"]\n",
+    "                                                        .sort_values(key=lambda col: col.str.lower())\n",
+    "                                                        .unique(),\n",
+    "                                                     columns=[\"Group names\"]),\n",
+    "                                        hover=True,\n",
+    "                                        class_name='mx-4')\n",
+    " "
    ]
   },
   {
