--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Drop rows where Full Name is missing (unable to identify) and Debut is filled with a placeholder date (not yet debuted)\n",
-    "df = df.loc[df[\"Full Name\"].isnull() is False]\n",
+    "df = df.loc[df[\"Full Name\"].isnull() == False]\n",
     "df = df.loc[df[\"Debut\"] != \"0/01/1900\"]\n",
     "\n",
     "# Convert columns to required datatypes\n",
@@ -617,117 +617,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define segments of layout below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout_home = html.Div([\n",
+    "    html.H1('K-Pop Data Visualisations', className='mt-5 mb-2 mx-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
+    "    html.P(\n",
+    "        \"This is a personal project on building a K-Pop themed dashboard using Dash. I do not own any data used in this analysis.\",\n",
+    "        className='mx-2'\n",
+    "    ),\n",
+    "    html.A(\n",
+    "        'Find data source here', \n",
+    "        href='https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv', \n",
+    "        className='mb-4 mx-2'\n",
+    "    ),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout_birthday = html.Div([\n",
+    "    html.H2('Idol Birthday Analysis', className=H2_STYLE),\n",
+    "    html.Div([\n",
+    "        html.H3('Idol birth year distribution', className=H3_STYLE),\n",
+    "        dbc.Tabs(id=\"tabs-birth-year\", active_tab='overall-birth-year', class_name='mx-2', children=[\n",
+    "            dbc.Tab(\n",
+    "                    label='Overall', \n",
+    "                    tab_id='overall-birth-year', \n",
+    "                    class_name=TAB_STYLE, \n",
+    "                    activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                    activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                ),\n",
+    "            dbc.Tab(\n",
+    "                    label='Male / Female', \n",
+    "                    tab_id='splitted-birth-year', \n",
+    "                    class_name=TAB_STYLE, \n",
+    "                    activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                    activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                ),\n",
+    "        ]),\n",
+    "        html.Div(id='tabs-content-birth-year')\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('Idol birth month distribution', className=H3_STYLE),\n",
+    "        dbc.Tabs(id=\"tabs-birth-month\", active_tab='overall-birth-month', class_name='mx-2', children=[\n",
+    "            dbc.Tab(\n",
+    "                    label='Overall', \n",
+    "                    tab_id='overall-birth-month', \n",
+    "                    class_name=TAB_STYLE, \n",
+    "                    activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                    activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                ),\n",
+    "            dbc.Tab(\n",
+    "                    label='Male / Female', \n",
+    "                    tab_id='splitted-birth-month', \n",
+    "                    class_name=TAB_STYLE, \n",
+    "                    activeTabClassName=ACTIVE_TAB_STYLE, \n",
+    "                    activeLabelClassName=ACTIVE_LABEL_STYLE\n",
+    "                ),\n",
+    "        ]),\n",
+    "        html.Div(id='tabs-content-birth-month')\n",
+    "    ]),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout_debut = html.Div([\n",
+    "    html.H2('Idol Debut Analysis', className=H2_STYLE),\n",
+    "    html.Div([\n",
+    "        html.H3('Idol debut month distribution', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_debut2, className='mx-2'),\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('Number of debuted idols per year', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_debut4, className='mx-2'),\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('Number of debuted groups per year', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_debut5, className='mx-2'),\n",
+    "    ]),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout_meta = html.Div([\n",
+    "    html.H2('Meta-analysis', className=H2_STYLE),\n",
+    "    html.Div([\n",
+    "        html.H3('Gender ratio of idols', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_meta1, className='mx-2'),\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('Number of members per group', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_meta2, className='mx-2'),\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('Country of origin distribution of idols', className=H3_STYLE),\n",
+    "        dcc.Graph(figure=fig_meta3, className='mx-2')\n",
+    "    ])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout_interactive = html.Div([\n",
+    "    html.H2('Interactive analysis', className=H2_STYLE),\n",
+    "    html.Div([\n",
+    "        html.H3('List of foreign idols', className=H3_STYLE),\n",
+    "        dcc.Dropdown(\n",
+    "            id='dropdown-foreign', \n",
+    "            options=sorted([i for i in list(df[\"Country\"].unique()) if i != \"South Korea\"]), \n",
+    "            searchable=True,\n",
+    "            placeholder='Select a country / region...',\n",
+    "            className='mx-4'\n",
+    "        ),\n",
+    "        html.Div(id='dropdown-content-foreign')\n",
+    "    ]),\n",
+    "    html.Div([\n",
+    "        html.H3('List of groups by alphabet', className=H3_STYLE),\n",
+    "        dcc.Dropdown(\n",
+    "            id='dropdown-alphabet', \n",
+    "            options=list(i.upper() for i in map(chr, range(ord('a'), ord('z')+1))) + [\"Others\"], # generate alphabets A-Z in a list\n",
+    "            searchable=True,\n",
+    "            placeholder='Select an alphabet...',\n",
+    "            className='mx-4'\n",
+    "        ),\n",
+    "        html.Div(id='dropdown-content-alphabet')\n",
+    "    ])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define sidebar layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define sidebar styling\n",
+    "SIDEBAR_STYLE = {\n",
+    "    \"position\": \"fixed\",\n",
+    "    \"top\": 0,\n",
+    "    \"left\": 0,\n",
+    "    \"bottom\": 0,\n",
+    "    \"width\": \"16rem\",\n",
+    "    \"padding\": \"2rem 1rem\",\n",
+    "    \"background-color\": \"#f8f9fa\",\n",
+    "}\n",
+    "\n",
+    "# Define padding for the page content\n",
+    "CONTENT_STYLE = {\n",
+    "    \"margin-left\": \"18rem\",\n",
+    "    \"margin-right\": \"2rem\",\n",
+    "    \"padding\": \"2rem 1rem\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sidebar = html.Div(\n",
+    "    [\n",
+    "        html.H2(\"Contents\", className=\"display-6\"),\n",
+    "        html.Hr(),\n",
+    "        dbc.Nav(\n",
+    "            [\n",
+    "                dbc.NavLink(\"Home\", href=\"/\", active=\"exact\"),\n",
+    "                dbc.NavLink(\"Birthday analysis\", href=\"/page-1\", active=\"exact\"),\n",
+    "                dbc.NavLink(\"Debut analysis\", href=\"/page-2\", active=\"exact\"),\n",
+    "                dbc.NavLink(\"Meta-analysis\", href=\"/page-3\", active=\"exact\"),\n",
+    "                dbc.NavLink(\"Interactive\", href=\"/page-4\", active=\"exact\"),\n",
+    "            ],\n",
+    "            vertical=True,\n",
+    "            pills=True,\n",
+    "        ),\n",
+    "        html.Div([\n",
+    "            html.P(children=[\"© \", html.A(\"SY Lee\", href='https://github.com/seenyanlee')], className='ms-2 position-absolute bottom-0')\n",
+    "        ])\n",
+    "    ],\n",
+    "    style=SIDEBAR_STYLE,\n",
+    ")\n",
+    "\n",
+    "content = html.Div(id=\"page-content\", children=[], style=CONTENT_STYLE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combine dashboard layout and define callback functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "app.layout = html.Div([\n",
-    "        html.H1('K-Pop Data Visualisations', className='mt-5 mb-2 ms-2 me-2 bg-primary bg-opacity-50 text-dark rounded'),\n",
-    "        html.A(\n",
-    "                'Find data source here', \n",
-    "                href='https://www.kaggle.com/datasets/nicolsalayoarias/all-kpop-idols/?select=kpopidolsv3.csv', \n",
-    "                className='mb-4 ms-2'\n",
-    "            ),\n",
-    "        html.Div([\n",
-    "            html.H2('Idol Birthday Analysis', className=H2_STYLE),\n",
-    "            html.Div([\n",
-    "                html.H3('Idol birth year distribution', className=H3_STYLE),\n",
-    "                dbc.Tabs(id=\"tabs-birth-year\", active_tab='overall-birth-year', class_name='mx-2', children=[\n",
-    "                    dbc.Tab(\n",
-    "                            label='Overall', \n",
-    "                            tab_id='overall-birth-year', \n",
-    "                            class_name=TAB_STYLE, \n",
-    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
-    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
-    "                        ),\n",
-    "                    dbc.Tab(\n",
-    "                            label='Male / Female', \n",
-    "                            tab_id='splitted-birth-year', \n",
-    "                            class_name=TAB_STYLE, \n",
-    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
-    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
-    "                        ),\n",
-    "                ]),\n",
-    "                html.Div(id='tabs-content-birth-year')\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('Idol birth month distribution', className=H3_STYLE),\n",
-    "                dbc.Tabs(id=\"tabs-birth-month\", active_tab='overall-birth-month', class_name='mx-2', children=[\n",
-    "                    dbc.Tab(\n",
-    "                            label='Overall', \n",
-    "                            tab_id='overall-birth-month', \n",
-    "                            class_name=TAB_STYLE, \n",
-    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
-    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
-    "                        ),\n",
-    "                    dbc.Tab(\n",
-    "                            label='Male / Female', \n",
-    "                            tab_id='splitted-birth-month', \n",
-    "                            class_name=TAB_STYLE, \n",
-    "                            activeTabClassName=ACTIVE_TAB_STYLE, \n",
-    "                            activeLabelClassName=ACTIVE_LABEL_STYLE\n",
-    "                        ),\n",
-    "                ]),\n",
-    "                html.Div(id='tabs-content-birth-month')\n",
-    "            ]),\n",
-    "        ]),\n",
-    "        html.Div([\n",
-    "            html.H2('Idol Debut Analysis', className=H2_STYLE),\n",
-    "            html.Div([\n",
-    "                html.H3('Idol debut month distribution', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_debut2, className='mx-2'),\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('Number of debuted idols per year', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_debut4, className='mx-2'),\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('Number of debuted groups per year', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_debut5, className='mx-2'),\n",
-    "            ]),\n",
-    "        ]),\n",
-    "        html.Div([\n",
-    "            html.H2('Meta-analysis', className=H2_STYLE),\n",
-    "            html.Div([\n",
-    "                html.H3('Gender ratio of idols', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_meta1, className='mx-2'),\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('Number of members per group', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_meta2, className='mx-2'),\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('Country of origin distribution of idols', className=H3_STYLE),\n",
-    "                dcc.Graph(figure=fig_meta3, className='mx-2')\n",
-    "            ])\n",
-    "        ]),\n",
-    "        html.Div([\n",
-    "            html.H2('Interactive analysis', className=H2_STYLE),\n",
-    "            html.Div([\n",
-    "                html.H3('List of foreign idols', className=H3_STYLE),\n",
-    "                dcc.Dropdown(\n",
-    "                    id='dropdown-foreign', \n",
-    "                    options=sorted([i for i in list(df[\"Country\"].unique()) if i != \"South Korea\"]), \n",
-    "                    searchable=True,\n",
-    "                    placeholder='Select a country / region...',\n",
-    "                    className='mx-4'\n",
-    "                ),\n",
-    "                html.Div(id='dropdown-content-foreign')\n",
-    "            ]),\n",
-    "            html.Div([\n",
-    "                html.H3('List of groups by alphabet', className=H3_STYLE),\n",
-    "                dcc.Dropdown(\n",
-    "                    id='dropdown-alphabet', \n",
-    "                    options=list(i.upper() for i in map(chr, range(ord('a'), ord('z')+1))) + [\"Others\"], # generate alphabets A-Z in a list\n",
-    "                    searchable=True,\n",
-    "                    placeholder='Select an alphabet...',\n",
-    "                    className='mx-4'\n",
-    "                ),\n",
-    "                html.Div(id='dropdown-content-alphabet')\n",
-    "            ])\n",
-    "        ])\n",
+    "    dcc.Location(id=\"url\"),\n",
+    "    sidebar,\n",
+    "    content\n",
     "])\n",
+    "\n",
+    "# Render sidebar\n",
+    "@callback(Output(\"page-content\", \"children\"), Input(\"url\", \"pathname\"))\n",
+    "def render_page_content(pathname):\n",
+    "    if pathname == \"/\":\n",
+    "        return layout_home\n",
+    "    elif pathname == \"/page-1\":\n",
+    "        return layout_birthday\n",
+    "    elif pathname == \"/page-2\":\n",
+    "        return layout_debut\n",
+    "    elif pathname == \"/page-3\":\n",
+    "        return layout_meta\n",
+    "    elif pathname == \"/page-4\":\n",
+    "        return layout_interactive\n",
+    "    # If the user tries to reach a different page, return a 404 message\n",
+    "    return dbc.Jumbotron(\n",
+    "        [\n",
+    "            html.H1(\"404: Not found\", className=\"text-danger\"),\n",
+    "            html.Hr(),\n",
+    "            html.P(f\"The pathname {pathname} was not recognised...\"),\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "# Render tabs for birth year analysis\n",
     "@callback(Output('tabs-content-birth-year', 'children'), Input('tabs-birth-year', 'active_tab'))\n",
